--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="../../public/stylesheets/normalize.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
         <link rel="stylesheet" href="../../public/stylesheets/lib.css">
-        
+        <link rel="Stylesheet" href="../../public/stylesheets/app.css">
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <title>Geology Cakes</title>
     </head>
     <body>
@@ -56,6 +57,54 @@
                     <li>
                         <p>
                             Gneiss rock hammer!
+                        </p>
+                    </li>
+                </ul>
+            </article>
+            
+            <!--third post-->
+            </article> 
+            <article class="post">
+                <div class="user-info">
+                    <img src="http://thenorthwoodsofwisconsin.com/images/icons/bear.png"></img>
+                    <h2>Gneiss Glass</h2>
+                    <h3>22 minutes ago</h3>
+                </div>
+                <a class="photo" href="#">
+                    <img src="http://68.media.tumblr.com/tumblr_lenx0iIIgG1qbh26io1_1280.jpg">
+                </a>
+                <div class="actions">
+                    2 likes
+                    <span>0 comments</span>
+                </div>
+                <ul class="comments">
+                    <li>
+                        <p>
+                            How a geologist thinks of cake!
+                        </p>
+                    </li>
+                </ul>
+            </article>
+            
+            <!--fourth post-->
+            </article> 
+            <article class="post">
+                <div class="user-info">
+                    <img src="http://thenorthwoodsofwisconsin.com/images/icons/bear.png"></img>
+                    <h2>Gneiss Glass</h2>
+                    <h3>22 minutes ago</h3>
+                </div>
+                <a class="photo" href="#">
+                    <img src="http://images.mentalfloss.com/sites/default/files/styles/insert_main_wide_image/public/ccearthcake12_zps55b3a685.jpg">
+                </a>
+                <div class="actions">
+                    2 likes
+                    <span>0 comments</span>
+                </div>
+                <ul class="comments">
+                    <li>
+                        <p>
+                            The core is cake!
                         </p>
                     </li>
                 </ul>
