--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,72 +4,30 @@
             </h1>
         </header>
         <main role = "main">
+            <% @posts.each do |post| %>
+                <article class="post">
+                    <div class="user-info">
+                        <img src="<%= post[:avatar_url] %>" alt="<%= post[:username] %>">
+                        <h2><%= post[:username] %></h2>
+                        <h3><%= post[:humanized_time_ago] %></h3>
+                    </div>
+                    <a class="photo" href="#">
+                        <img src="<%= post[:photo_url] %>" alt="post from <%= post[:username] %>">
+                    </a>
+                    <div class="actions">
+                        <% post[:like_count] %> likes
+                        <span class="comment-count"><%= post[:comment_count] %> comment</span>
+                    </div>
+                    <ul class="comments">
+                        <% post[:comments].each do |comment| %>
+                            <li>
+                                <p>
+                                    <%= comment[:username] %>: <%= comment[:text] %>
+                                </p>
+                            </li>
+                        <% end %>
+                    </ul>
+                </article>
+            <% end %>
+        </main>
             
-            <!--first post-->
-            <article class="post">
-                <div class="user-info">
-                    <img src="<%= @post_fred[:avatar_url] %>" alt="<%= @post_fred[:username] %>">
-                    <h2><%= @post_fred[:username] %></h2>
-                    <h3><%= @post_fred[:humanized_time_ago] %></h3>
-                </div>
-                <a class="photo" href="#">
-                    <img src="<%= @post_fred[:photo_url] %>">
-                </a>
-                <div class="actions">
-                    <% @post_fred[:like_count] %> likes
-                    <span class="comment-count"><%= @post_fred[:comment_count] %> comment</span>
-                </div>
-                <ul class="comments">
-                    <li>
-                        <p>
-                            <%= @post_fred[:comments][0][:username] %>: <%= @post_fred[:comments][0][:text] %>
-                        </p>
-                    </li>
-                </ul>
-            </article>
-            
-            <!--Second post-->
-            <article class="post">
-                <div class="user-info">
-                    <img src="<%= @post_gneiss[:avatar_url] %>" alt="<%= @post_gneiss[:username] %>">
-                    <h2><%= @post_gneiss[:username] %></h2>
-                    <h3><%= @post_gneiss[:humanized_time_ago] %></h3>
-                </div>
-                <a class="photo" href="#">
-                    <img src="<%= @post_gneiss[:photo_url] %>">
-                </a>
-                <div class="actions">
-                    <% @post_gneiss[:like_count] %> likes
-                    <span class="comment-count"><%= @post_gneiss[:comment_count] %> comment</span>
-                </div>
-                <ul class="comments">
-                    <li>
-                        <p>
-                            <%= @post_gneiss[:comments][0][:username] %>: <%= @post_gneiss[:comments][0][:text] %>
-                        </p>
-                    </li>
-                </ul>
-            </article>
-            
-            <!--Third post-->
-            <article class="post">
-                <div class="user-info">
-                    <img src="<%= @post_shirley[:avatar_url] %>" alt="<%= @post_shirley[:username] %>">
-                    <h2><%= @post_shirley[:username] %></h2>
-                    <h3><%= @post_shirley[:humanized_time_ago] %></h3>
-                </div>
-                <a class="photo" href="#">
-                    <img src="<%= @post_shirley[:photo_url] %>">
-                </a>
-                <div class="actions">
-                    <% @post_shirley[:like_count] %> likes
-                    <span class="comment-count"><%= @post_shirley[:comment_count] %> comment</span>
-                </div>
-                <ul class="comments">
-                    <li>
-                        <p>
-                            <%= @post_shirley[:comments][0][:username] %>: <%= @post_shirley[:comments][0][:text] %>
-                        </p>
-                    </li>
-                </ul>
-            </article>
